/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JPanel.java to edit this template
 */
package com.j3d.ui.engine;

import com.j3d.Static;

/**
 *
 * @author ACER
 */
public class CommandPalette extends javax.swing.JPanel {

    /**
     * Creates new form CommandPalette
     */
    public CommandPalette() {
        initComponents();
        Static.getLog().uiPrintLn("CommandPalette completed building");
    }

    private boolean disabled = false;

    public boolean isDisabled() {
        return disabled;
    }

    public void setDisabled(boolean disabled) {
        this.disabled = disabled;
        this.setVisible(!disabled);
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        inputField = new javax.swing.JTextField();
        logLabel = new javax.swing.JLabel();
        logLabel2 = new javax.swing.JLabel();

        setMaximumSize(new java.awt.Dimension(690, 236));
        setMinimumSize(new java.awt.Dimension(690, 236));

        inputField.setBackground(new java.awt.Color(51, 51, 51));
        inputField.setFont(new java.awt.Font("Segoe UI", 0, 18)); // NOI18N
        inputField.setForeground(new java.awt.Color(255, 255, 255));

        logLabel.setFont(new java.awt.Font("Segoe UI", 0, 18)); // NOI18N
        logLabel.setForeground(new java.awt.Color(255, 255, 255));
        logLabel.setLabelFor(inputField);

        logLabel2.setFont(new java.awt.Font("Segoe UI", 0, 18)); // NOI18N
        logLabel2.setForeground(new java.awt.Color(255, 255, 255));
        logLabel2.setLabelFor(inputField);

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(this);
        this.setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addComponent(inputField, javax.swing.GroupLayout.DEFAULT_SIZE, 829, Short.MAX_VALUE)
            .addComponent(logLabel2, javax.swing.GroupLayout.DEFAULT_SIZE, 829, Short.MAX_VALUE)
            .addComponent(logLabel, javax.swing.GroupLayout.DEFAULT_SIZE, 829, Short.MAX_VALUE)
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
                .addComponent(logLabel, javax.swing.GroupLayout.PREFERRED_SIZE, 44, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addGap(0, 6, Short.MAX_VALUE)
                .addComponent(inputField, javax.swing.GroupLayout.PREFERRED_SIZE, 34, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(logLabel2, javax.swing.GroupLayout.PREFERRED_SIZE, 44, javax.swing.GroupLayout.PREFERRED_SIZE))
        );
    }// </editor-fold>//GEN-END:initComponents


    // Variables declaration - do not modify//GEN-BEGIN:variables
    public javax.swing.JTextField inputField;
    public javax.swing.JLabel logLabel;
    public javax.swing.JLabel logLabel2;
    // End of variables declaration//GEN-END:variables
}
